# dats-template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
replays/: last.replay
rewind/: rewind-viewer  rewind-viewer.yaml
src/: api.cpp  api.h  entities.cpp  entities.h  main.cpp  random.cpp  random.h  strategy.cpp  vec2.cpp  vec2.h
src/client/: api.cpp  api.h  main.cpp  strategy.cpp
src/common/: entities.cpp  entities.h  random.cpp  replay.cpp  replay.h  vec2.cpp
src/replayer/: main.cpp
